--- a/react-music-player/src/styles/_player.scss
+++ b/react-music-player/src/styles/_player.scss
@@ -9,13 +9,17 @@
 .time-control {
   width: 50%;
   display: flex;
+  align-items: center;
 
   input {
     width: 100%;
-    padding: 1rem 0rem;
+    -webkit-appearance: none;
+    background: transparent;
+    cursor: pointer;
   }
 
   p {
+    min-width: 60px;
     padding: 1rem;
   }
 }
@@ -30,4 +34,32 @@
   svg {
     cursor: pointer;
   }
+}
+
+input[type="range"]:focus {
+  outline: none;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 16px;
+  width: 16px;
+}
+
+.track {
+  height: 1rem;
+  width: 100%;
+  position: relative;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.animate-track {
+  position: absolute;
+  background: rgb(204, 204, 204);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: translateX(0%);
+  pointer-events: none;
 }
