--- a/react-music-player/src/styles/app.scss
+++ b/react-music-player/src/styles/app.scss
@@ -21,6 +21,22 @@ h4 {
   color: rgb(100, 100, 100);
 }
 
+.App {
+  transition: all 0.5s ease;
+}
+
+.library-active {
+  margin-left: 20rem;
+}
+
+@media screen and (max-width: 768px) {
+  .library-active {
+    img {
+      width: 30% !important;
+    }
+  }
+}
+
 @import "./song";
 @import "./player";
 @import "./library";
