added playing animations

--- a/react-music-player/src/styles/_nav.scss
+++ b/react-music-player/src/styles/_nav.scss
@@ -5,7 +5,7 @@
   align-items: center;
 
   button {
-    background: transparent;
+    background: white;
     border: none;
     cursor: pointer;
     border: 2px solid rgb(65, 65, 65);
