--- a/react-music-player/src/styles/_library.scss
+++ b/react-music-player/src/styles/_library.scss
@@ -21,6 +21,7 @@
   align-items: center;
   padding: 1rem 2rem 1rem 2rem;
   cursor: pointer;
+  transition: background 0.2s ease;
   img {
     width: 40%;
   }
