--- a/react-music-player/src/styles/_song.scss
+++ b/react-music-player/src/styles/_song.scss
@@ -8,6 +8,12 @@
   img {
     width: 20%;
     border-radius: 50%;
+    animation: rotation 30s infinite;
+    animation-play-state: paused;
+  }
+
+  .song-playing {
+    animation-play-state: running;
   }
 
   h2 {
@@ -22,5 +28,14 @@
 @media screen and (max-width: 768px) {
   img {
     width: 60% !important;
+  }
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
   }
 }
