--- a/react-music-player/src/styles/app.scss
+++ b/react-music-player/src/styles/app.scss
@@ -34,6 +34,10 @@ h4 {
     img {
       width: 30% !important;
     }
+    .library-button {
+      position: fixed;
+      right: 30px;
+    }
   }
 }
 
