layout and refactor

--- a/react-music-player/src/styles/app.scss
+++ b/react-music-player/src/styles/app.scss
@@ -35,8 +35,7 @@ h4 {
       width: 30% !important;
     }
     .library-button {
-      position: fixed;
-      right: 30px;
+      right: 2rem;
     }
   }
 }
