--- a/react-music-player/src/styles/app.scss
+++ b/react-music-player/src/styles/app.scss
@@ -35,7 +35,8 @@ h4 {
       width: 30% !important;
     }
     .library-button {
-      right: 2rem;
+      position: fixed;
+      right: 1rem;
     }
   }
 }
